@@ -18175,6 +18175,143 @@ expr_stmt|;
 block|}
 end_function
 
+begin_comment
+comment|// LUCENE-6523
+end_comment
+
+begin_function
+DECL|method|testCommitImmediaatelyAfterNRTReopen
+specifier|public
+name|void
+name|testCommitImmediaatelyAfterNRTReopen
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DirectoryReader
+name|r
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|w
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|r
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DirectoryReader
+name|r2
+init|=
+name|DirectoryReader
+operator|.
+name|openIfChanged
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|r2
+argument_list|)
+expr_stmt|;
+comment|// segments_N should have changed:
+name|assertFalse
+argument_list|(
+name|r2
+operator|.
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getSegmentsFileName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|r
+operator|.
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getSegmentsFileName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|r
+argument_list|,
+name|r2
+argument_list|,
+name|w
+argument_list|,
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+end_function
+
 unit|}
 end_unit
 
