@@ -750,6 +750,27 @@ name|commit
 argument_list|()
 expr_stmt|;
 comment|// no changes that are not visible to the reader
+comment|// A commit is now seen as a change to an NRT reader:
+name|assertFalse
+argument_list|(
+name|reader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|reader
+operator|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|reader
@@ -771,7 +792,6 @@ name|isCurrent
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// all changes are visible to the reader
 name|iwc
 operator|=
 name|newIndexWriterConfig
@@ -1150,7 +1170,8 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|assertTrue
+comment|// writer.close wrote a new commit
+name|assertFalse
 argument_list|(
 name|r2
 operator|.
@@ -1176,7 +1197,7 @@ name|isCurrent
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertFalse
 argument_list|(
 name|r2
 operator|.
@@ -1275,7 +1296,7 @@ argument_list|(
 name|doc
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertFalse
 argument_list|(
 name|r2
 operator|.
@@ -1564,7 +1585,7 @@ name|close
 argument_list|()
 expr_stmt|;
 comment|// close is actually a commit both should see the changes
-name|assertTrue
+name|assertFalse
 argument_list|(
 name|nrtReader
 operator|.
@@ -1790,7 +1811,8 @@ operator|.
 name|commit
 argument_list|()
 expr_stmt|;
-name|assertTrue
+comment|// A commit is seen as a change to NRT reader:
+name|assertFalse
 argument_list|(
 name|r1
 operator|.
@@ -1798,7 +1820,6 @@ name|isCurrent
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// we have seen all changes - no change after opening the NRT reader
 name|assertEquals
 argument_list|(
 literal|200
